--- a/pkg/inst/doc/QuasiAlign.Rnw
+++ b/pkg/inst/doc/QuasiAlign.Rnw
@@ -487,7 +487,7 @@ We can obtain the rank name for each sequence individually by using
 \code{all=TRUE}. The folowing code counts how many sequences we have 
 for each genus.
 <<>>=
-table(getRank(db, rank="Genus", all=TRUE))
+table(getRank(db, rank="Genus", all=TRUE)[,1])
 @
 
 This informartion can be easily turned into a barplot showing the abundance
@@ -496,7 +496,7 @@ of different orders in the data database (see Figure~\ref{fig:abundanceplot}).
 <<abundanceplot, fig=TRUE, include=FALSE>>=
 oldpar <- par(mar=c(12,5,5,5)) ### make space for labels
 barplot(sort(
-    table(getRank(db, rank="Genus", all=TRUE)), 
+    table(getRank(db, rank="Genus", all=TRUE)[,1]), 
     decreasing=TRUE), las=2)
 par(oldpar)
 @
