Made changes to getSequences to handle multiple names, changes to validateModels and GenModelDB
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@191 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/inst/doc/QuasiAlign.Rnw
+++ b/pkg/inst/doc/QuasiAlign.Rnw
@@ -313,7 +313,7 @@ this approach for taxonomic classification in \citep{hahsler:Kotamarti:2010}.
 %%end
 \section{QuasiAlign Package}
 \pkg{QuasiAlign} builds on the packages 
-\pkg{seqinr} for biological sequence analysis,
+\pkg{Biostrings} for biological sequence analysis,
 \pkg{RSQLite} and \pkg{DBI} for storage and data management 
 functionality, \pkg{caTools} for
 Base64 encoding of models, and \pkg{rEMM} for model
