--- a/pkg/QuasiAlign/inst/doc/QuasiAlign.Rnw
+++ b/pkg/QuasiAlign/inst/doc/QuasiAlign.Rnw
@@ -9,8 +9,8 @@
 %\SweaveOpts{strip.white=TRUE, eps=FALSE}
 %\AtBeginDocument{\setkeys{Gin}{width=0.6\textwidth}}
 
+\usepackage[english]{babel}
 
-\usepackage[utf8]{inputenc}
 
 %% end of declarations %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage{amsmath}
