--- a/pkg/QuasiAlign/inst/doc/QuasiAlign.Rnw
+++ b/pkg/QuasiAlign/inst/doc/QuasiAlign.Rnw
@@ -9,6 +9,7 @@
 %\SweaveOpts{strip.white=TRUE, eps=FALSE}
 %\AtBeginDocument{\setkeys{Gin}{width=0.6\textwidth}}
 
+\usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
 
 
@@ -88,11 +89,11 @@ health screening in the near future.
         E-mail: \email{anagar@smu.edu}\\
     
     Michael Hahsler\\
-        Computer Science and Engineering\\
+        Engineering Management, Information, and Systems\\
         Lyle School of Engineering\\
         Southern Methodist University\\
-        P.O. Box 750122 \\
-        Dallas, TX 75275-0122\\
+        P.O. Box 750123 \\
+        Dallas, TX 75275-0123\\
         E-mail: \email{mhahsler@lyle.smu.edu}\\
         URL: \url{http://lyle.smu.edu/~mhahsler}
 }
